# transaction-fraud-detection

./: .gitignore  README.md  pyproject.toml
datasets/: README.md  feature-dictionary.md
notebooks/: 01-feature-engineering.ipynb  02-exploratory-data-analysis.ipynb  02-feature-engineering.ipynb  03-model-training-evaluation.ipynb  fraud-detection.ipynb
output/: features-mutual-info-scores.csv
